// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests Base components Attribute Empty input 1`] = `
<div
  class="rounded-md w-full my-2 relative"
>
  <label
    class="block text-sm font-medium text-gray-700 text-left pl-2"
    id="listbox-label"
  >
    
    Lbl
  
  </label>
   
  <input
    autocomplete="chrome-off"
    class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside "
    id="Lbl"
    label="Lbl"
    options="[object Object]"
    placeholder=""
    type=""
  >
    <option
      disabled="disabled"
      selected="selected"
      value=""
    >
      
      Lbl
    
    </option>
  </input>
</div>
`;

exports[`Snapshot tests Base components Attribute Input changed 1`] = `
<div
  class="rounded-md w-full my-2 relative"
>
  <label
    class="block text-sm font-medium text-gray-700 text-left pl-2"
    id="listbox-label"
  >
    
    Lbl
  
  </label>
   
  <input
    autocomplete="chrome-off"
    class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside "
    id="Lbl"
    label="Lbl"
    options="[object Object]"
    placeholder=""
    type=""
  >
    <option
      disabled="disabled"
      selected="selected"
      value=""
    >
      
      Lbl
    
    </option>
  </input>
</div>
`;

exports[`Snapshot tests Base components Attribute Renders correctly 1`] = `
<div
  class="rounded-md w-full my-2 relative"
>
  <label
    class="block text-sm font-medium text-gray-700 text-left pl-2"
    id="listbox-label"
  >
    
    Lbl
  
  </label>
   
  <input
    autocomplete="chrome-off"
    class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside border-b border-solid border-primary pl-2"
    id="Lbl"
    label="Lbl"
    options="[object Object]"
    placeholder=""
    type="text"
  >
    <option
      disabled="disabled"
      selected="selected"
      value=""
    >
      
      Lbl
    
    </option>
  </input>
</div>
`;

exports[`Snapshot tests Base components Attribute Renders correctly with another type 1`] = `
<div
  class="rounded-md w-full my-2 relative"
>
  <label
    class="block text-sm font-medium text-gray-700 text-left pl-2"
    id="listbox-label"
  >
    
    Lbl
  
  </label>
   
  <div
    autocomplete="chrome-off"
    class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside "
    id="Lbl"
    label="Lbl"
    placeholder=""
    type="select"
  >
    <button
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="listbox-label"
      class="relative w-full border border-primary rounded-md pl-3 pr-10 py-2 text-left cursor-pointer focus:outline-none bg-danger sm:text-sm excluded text-white"
      id="dropdown-button"
      type="button"
    >
      <span
        class="flex items-center"
      >
        <span
          class="ml-3 block truncate"
        >
          
        Nothing...
      
        </span>
      </span>
       
      <span
        class="ml-3 absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 text-gray-400"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
     
    <div
      class="absolute mt-1 w-full rounded-md bg-white shadow-lg z-10 hidden"
    >
      <ul
        aria-activedescendant="listbox-item-3"
        aria-labelledby="listbox-label"
        class="max-h-56 rounded-md py-1 text-base ring-1 ring-black ring-opacity-5 overflow-auto focus:outline-none sm:text-sm h-48 bg-pink-inside"
        role="listbox"
        tabindex="-1"
      >
        <li
          class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
          id="listbox-item-0"
          role="option"
        >
          <div
            class="flex items-center"
          >
            <span
              class="ml-3 block font-normal truncate"
            >
              
            No options
          
            </span>
          </div>
           
          <!---->
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Snapshot tests Base components Attribute Renders correctly with default type 1`] = `
<div
  class="rounded-md w-full my-2 relative"
>
  <label
    class="block text-sm font-medium text-gray-700 text-left pl-2"
    id="listbox-label"
  >
    
    Lbl
  
  </label>
   
  <input
    autocomplete="chrome-off"
    class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside "
    id="Lbl"
    label="Lbl"
    options="[object Object]"
    placeholder=""
    type=""
  >
    <option
      disabled="disabled"
      selected="selected"
      value=""
    >
      
      Lbl
    
    </option>
  </input>
</div>
`;

exports[`Snapshot tests Base components Attribute Select options 1`] = `
<div
  class="rounded-md w-full my-2 relative"
>
  <label
    class="block text-sm font-medium text-gray-700 text-left pl-2"
    id="listbox-label"
  >
    
    Lbl
  
  </label>
   
  <input
    autocomplete="chrome-off"
    class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside "
    id="Lbl"
    label="Lbl"
    options="[object Object]"
    placeholder=""
    type=""
  >
    <option
      disabled="disabled"
      selected="selected"
      value=""
    >
      
      Lbl
    
    </option>
  </input>
</div>
`;

exports[`Snapshot tests Base components Select Click on option change selected 1`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="listbox-label"
    class="relative w-full border border-primary rounded-md pl-3 pr-10 py-2 text-left cursor-pointer focus:outline-none bg-danger sm:text-sm excluded text-white"
    id="dropdown-button"
    type="button"
  >
    <span
      class="flex items-center"
    >
      <span
        class="ml-3 block truncate"
      >
        
        Nothing...
      
      </span>
    </span>
     
    <span
      class="ml-3 absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        class="h-5 w-5 text-gray-400"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
   
  <div
    class="absolute mt-1 w-full rounded-md bg-white shadow-lg z-10 hidden"
  >
    <ul
      aria-activedescendant="listbox-item-3"
      aria-labelledby="listbox-label"
      class="max-h-56 rounded-md py-1 text-base ring-1 ring-black ring-opacity-5 overflow-auto focus:outline-none sm:text-sm h-48 bg-pink-inside"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
        id="listbox-item-0"
        role="option"
      >
        <div
          class="flex items-center"
        >
          <span
            class="ml-3 block font-normal truncate"
          >
            
            No options
          
          </span>
        </div>
         
        <!---->
      </li>
    </ul>
  </div>
</div>
`;

exports[`Snapshot tests Base components Select Close dropdown on blur 1`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="listbox-label"
    class="relative w-full border border-primary rounded-md pl-3 pr-10 py-2 text-left cursor-pointer focus:outline-none bg-danger sm:text-sm excluded text-white"
    id="dropdown-button"
    type="button"
  >
    <span
      class="flex items-center"
    >
      <span
        class="ml-3 block truncate"
      >
        
        Nothing...
      
      </span>
    </span>
     
    <span
      class="ml-3 absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        class="h-5 w-5 text-gray-400"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
   
  <div
    class="absolute mt-1 w-full rounded-md bg-white shadow-lg z-10 block"
  >
    <ul
      aria-activedescendant="listbox-item-3"
      aria-labelledby="listbox-label"
      class="max-h-56 rounded-md py-1 text-base ring-1 ring-black ring-opacity-5 overflow-auto focus:outline-none sm:text-sm h-48 bg-pink-inside"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
        id="listbox-item-0"
        role="option"
      >
        <div
          class="flex items-center"
        >
          <span
            class="ml-3 block font-normal truncate"
          >
            
            No options
          
          </span>
        </div>
         
        <!---->
      </li>
    </ul>
  </div>
</div>
`;

exports[`Snapshot tests Base components Select Renders correctly 1`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="listbox-label"
    class="relative w-full border border-primary rounded-md pl-3 pr-10 py-2 text-left cursor-pointer focus:outline-none bg-danger sm:text-sm excluded text-white"
    id="dropdown-button"
    type="button"
  >
    <span
      class="flex items-center"
    >
      <span
        class="ml-3 block truncate"
      >
        
        Nothing...
      
      </span>
    </span>
     
    <span
      class="ml-3 absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        class="h-5 w-5 text-gray-400"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
   
  <div
    class="absolute mt-1 w-full rounded-md bg-white shadow-lg z-10 hidden"
  >
    <ul
      aria-activedescendant="listbox-item-3"
      aria-labelledby="listbox-label"
      class="max-h-56 rounded-md py-1 text-base ring-1 ring-black ring-opacity-5 overflow-auto focus:outline-none sm:text-sm h-48 bg-pink-inside"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
        id="listbox-item-0"
        role="option"
      >
        <div
          class="flex items-center"
        >
          <span
            class="ml-3 block font-normal truncate"
          >
            
            No options
          
          </span>
        </div>
         
        <!---->
      </li>
    </ul>
  </div>
</div>
`;

exports[`Snapshot tests Base components Select openDropDown => toggle showDropDown 1`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="listbox-label"
    class="relative w-full border border-primary rounded-md pl-3 pr-10 py-2 text-left cursor-pointer focus:outline-none bg-danger sm:text-sm excluded text-white"
    id="dropdown-button"
    type="button"
  >
    <span
      class="flex items-center"
    >
      <span
        class="ml-3 block truncate"
      >
        
        Nothing...
      
      </span>
    </span>
     
    <span
      class="ml-3 absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        class="h-5 w-5 text-gray-400"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
   
  <div
    class="absolute mt-1 w-full rounded-md bg-white shadow-lg z-10 block"
  >
    <ul
      aria-activedescendant="listbox-item-3"
      aria-labelledby="listbox-label"
      class="max-h-56 rounded-md py-1 text-base ring-1 ring-black ring-opacity-5 overflow-auto focus:outline-none sm:text-sm h-48 bg-pink-inside"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
        id="listbox-item-0"
        role="option"
      >
        <div
          class="flex items-center"
        >
          <span
            class="ml-3 block font-normal truncate"
          >
            
            No options
          
          </span>
        </div>
         
        <!---->
      </li>
    </ul>
  </div>
</div>
`;

exports[`Snapshot tests Chat Renders correctly 1`] = `
<span
  class="flex flex-col justify-center items-center md:mb-8"
>
  <span
    class="flex items-end"
  >
    <p
      class="title-test font-titles font-bold capitalize sm:text-lg md:text-2xl mr-1"
    >
      
      Kind responses for everybody
    
    </p>
     
    <svg
      class="icon-test stroke-current text-danger w-8"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</span>
`;

exports[`Snapshot tests Get Started Emitted 'from' change 1`] = `
<div
  class="wrapper w-full md:w-2/5 flex flex-col mt-3 md:my-auto shadow-md p-2"
>
  <div
    class="rounded-md w-full my-2 relative"
  >
    <label
      class="block text-sm font-medium text-gray-700 text-left pl-2"
      id="listbox-label"
    >
      
    From
  
    </label>
     
    <input
      autocomplete="chrome-off"
      class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside border-b border-solid border-primary pl-2"
      id="From"
      label="From"
      options="[object Object]"
      placeholder="Mike"
      type="text"
    >
      <option
        disabled="disabled"
        selected="selected"
        value=""
      >
        
      From
    
      </option>
    </input>
  </div>
   
  <div
    class="rounded-md w-full my-2 relative"
  >
    <label
      class="block text-sm font-medium text-gray-700 text-left pl-2"
      id="listbox-label"
    >
      
    To
  
    </label>
     
    <input
      autocomplete="chrome-off"
      class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside border-b border-solid border-primary pl-2"
      id="To"
      label="To"
      options="[object Object]"
      placeholder="My lovely Boss"
      type="text"
    >
      <option
        disabled="disabled"
        selected="selected"
        value=""
      >
        
      To
    
      </option>
    </input>
  </div>
   
  <div
    class="rounded-md w-full my-2 relative"
  >
    <label
      class="block text-sm font-medium text-gray-700 text-left pl-2"
      id="listbox-label"
    >
      
     Category
  
    </label>
     
    <div
      autocomplete="chrome-off"
      class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside "
      id=" Category"
      label=" Category"
      placeholder=""
      type="select"
    >
      <button
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="listbox-label"
        class="relative w-full border border-primary rounded-md pl-3 pr-10 py-2 text-left cursor-pointer focus:outline-none bg-danger sm:text-sm excluded text-white"
        id="dropdown-button"
        type="button"
      >
        <span
          class="flex items-center"
        >
          <span
            class="ml-3 block truncate"
          >
            
        Nothing...
      
          </span>
        </span>
         
        <span
          class="ml-3 absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-400"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
       
      <div
        class="absolute mt-1 w-full rounded-md bg-white shadow-lg z-10 hidden"
      >
        <ul
          aria-activedescendant="listbox-item-3"
          aria-labelledby="listbox-label"
          class="max-h-56 rounded-md py-1 text-base ring-1 ring-black ring-opacity-5 overflow-auto focus:outline-none sm:text-sm h-48 bg-pink-inside"
          role="listbox"
          tabindex="-1"
        >
          <li
            class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
            id="listbox-item-0"
            role="option"
          >
            <div
              class="flex items-center"
            >
              <span
                class="ml-3 block font-normal truncate"
              >
                
            test
          
              </span>
            </div>
             
            <!---->
          </li>
          <li
            class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
            id="listbox-item-1"
            role="option"
          >
            <div
              class="flex items-center"
            >
              <span
                class="ml-3 block font-normal truncate"
              >
                
            test2
          
              </span>
            </div>
             
            <!---->
          </li>
        </ul>
      </div>
    </div>
  </div>
   
  <button
    class="group transition duration-150 ease-in-out relative w-full mt-5 shadow-sm flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-secondary lg:hover:bg-secondary-hovered lg:active:bg-secondary-hovered focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 ac"
    type="submit"
  >
    <span
      class="absolute left-0 inset-y-0 flex items-center pl-3"
    >
      <svg
        aria-hidden="true"
        class="h-5 w-5 text-white group-hover:text-white"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    
    Find Response
  
  </button>
</div>
`;

exports[`Snapshot tests Get Started Emitted 'to' change 1`] = `
<div
  class="wrapper w-full md:w-2/5 flex flex-col mt-3 md:my-auto shadow-md p-2"
>
  <div
    class="rounded-md w-full my-2 relative"
  >
    <label
      class="block text-sm font-medium text-gray-700 text-left pl-2"
      id="listbox-label"
    >
      
    From
  
    </label>
     
    <input
      autocomplete="chrome-off"
      class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside border-b border-solid border-primary pl-2"
      id="From"
      label="From"
      options="[object Object]"
      placeholder="Mike"
      type="text"
    >
      <option
        disabled="disabled"
        selected="selected"
        value=""
      >
        
      From
    
      </option>
    </input>
  </div>
   
  <div
    class="rounded-md w-full my-2 relative"
  >
    <label
      class="block text-sm font-medium text-gray-700 text-left pl-2"
      id="listbox-label"
    >
      
    To
  
    </label>
     
    <input
      autocomplete="chrome-off"
      class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside border-b border-solid border-primary pl-2"
      id="To"
      label="To"
      options="[object Object]"
      placeholder="My lovely Boss"
      type="text"
    >
      <option
        disabled="disabled"
        selected="selected"
        value=""
      >
        
      To
    
      </option>
    </input>
  </div>
   
  <div
    class="rounded-md w-full my-2 relative"
  >
    <label
      class="block text-sm font-medium text-gray-700 text-left pl-2"
      id="listbox-label"
    >
      
     Category
  
    </label>
     
    <div
      autocomplete="chrome-off"
      class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside "
      id=" Category"
      label=" Category"
      placeholder=""
      type="select"
    >
      <button
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="listbox-label"
        class="relative w-full border border-primary rounded-md pl-3 pr-10 py-2 text-left cursor-pointer focus:outline-none bg-danger sm:text-sm excluded text-white"
        id="dropdown-button"
        type="button"
      >
        <span
          class="flex items-center"
        >
          <span
            class="ml-3 block truncate"
          >
            
        Nothing...
      
          </span>
        </span>
         
        <span
          class="ml-3 absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-400"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
       
      <div
        class="absolute mt-1 w-full rounded-md bg-white shadow-lg z-10 hidden"
      >
        <ul
          aria-activedescendant="listbox-item-3"
          aria-labelledby="listbox-label"
          class="max-h-56 rounded-md py-1 text-base ring-1 ring-black ring-opacity-5 overflow-auto focus:outline-none sm:text-sm h-48 bg-pink-inside"
          role="listbox"
          tabindex="-1"
        >
          <li
            class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
            id="listbox-item-0"
            role="option"
          >
            <div
              class="flex items-center"
            >
              <span
                class="ml-3 block font-normal truncate"
              >
                
            test
          
              </span>
            </div>
             
            <!---->
          </li>
          <li
            class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
            id="listbox-item-1"
            role="option"
          >
            <div
              class="flex items-center"
            >
              <span
                class="ml-3 block font-normal truncate"
              >
                
            test2
          
              </span>
            </div>
             
            <!---->
          </li>
        </ul>
      </div>
    </div>
  </div>
   
  <button
    class="group transition duration-150 ease-in-out relative w-full mt-5 shadow-sm flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-secondary lg:hover:bg-secondary-hovered lg:active:bg-secondary-hovered focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 ac"
    type="submit"
  >
    <span
      class="absolute left-0 inset-y-0 flex items-center pl-3"
    >
      <svg
        aria-hidden="true"
        class="h-5 w-5 text-white group-hover:text-white"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    
    Find Response
  
  </button>
</div>
`;

exports[`Snapshot tests Get Started Renders correctly 1`] = `
<div
  class="wrapper w-full md:w-2/5 flex flex-col mt-3 md:my-auto shadow-md p-2"
>
  <div
    class="rounded-md w-full my-2 relative"
  >
    <label
      class="block text-sm font-medium text-gray-700 text-left pl-2"
      id="listbox-label"
    >
      
    From
  
    </label>
     
    <input
      autocomplete="chrome-off"
      class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside border-b border-solid border-primary pl-2"
      id="From"
      label="From"
      options="[object Object]"
      placeholder="Mike"
      type="text"
    >
      <option
        disabled="disabled"
        selected="selected"
        value=""
      >
        
      From
    
      </option>
    </input>
  </div>
   
  <div
    class="rounded-md w-full my-2 relative"
  >
    <label
      class="block text-sm font-medium text-gray-700 text-left pl-2"
      id="listbox-label"
    >
      
    To
  
    </label>
     
    <input
      autocomplete="chrome-off"
      class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside border-b border-solid border-primary pl-2"
      id="To"
      label="To"
      options="[object Object]"
      placeholder="My lovely Boss"
      type="text"
    >
      <option
        disabled="disabled"
        selected="selected"
        value=""
      >
        
      To
    
      </option>
    </input>
  </div>
   
  <div
    class="rounded-md w-full my-2 relative"
  >
    <label
      class="block text-sm font-medium text-gray-700 text-left pl-2"
      id="listbox-label"
    >
      
     Category
  
    </label>
     
    <div
      autocomplete="chrome-off"
      class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside "
      id=" Category"
      label=" Category"
      placeholder=""
      type="select"
    >
      <button
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="listbox-label"
        class="relative w-full border border-primary rounded-md pl-3 pr-10 py-2 text-left cursor-pointer focus:outline-none bg-danger sm:text-sm excluded text-white"
        id="dropdown-button"
        type="button"
      >
        <span
          class="flex items-center"
        >
          <span
            class="ml-3 block truncate"
          >
            
        test
      
          </span>
        </span>
         
        <span
          class="ml-3 absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-400"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
       
      <div
        class="absolute mt-1 w-full rounded-md bg-white shadow-lg z-10 hidden"
      >
        <ul
          aria-activedescendant="listbox-item-3"
          aria-labelledby="listbox-label"
          class="max-h-56 rounded-md py-1 text-base ring-1 ring-black ring-opacity-5 overflow-auto focus:outline-none sm:text-sm h-48 bg-pink-inside"
          role="listbox"
          tabindex="-1"
        >
          <li
            class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
            id="listbox-item-0"
            role="option"
          >
            <div
              class="flex items-center"
            >
              <span
                class="ml-3 block font-normal truncate"
              >
                
            test
          
              </span>
            </div>
             
            <span
              class="absolute inset-y-0 right-0 flex items-center pr-4"
            >
              <svg
                class="icon-test stroke-current text-danger w-8"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </li>
          <li
            class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
            id="listbox-item-1"
            role="option"
          >
            <div
              class="flex items-center"
            >
              <span
                class="ml-3 block font-normal truncate"
              >
                
            test2
          
              </span>
            </div>
             
            <!---->
          </li>
        </ul>
      </div>
    </div>
  </div>
   
  <button
    class="group transition duration-150 ease-in-out relative w-full mt-5 shadow-sm flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-secondary lg:hover:bg-secondary-hovered lg:active:bg-secondary-hovered focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 ac"
    type="submit"
  >
    <span
      class="absolute left-0 inset-y-0 flex items-center pl-3"
    >
      <svg
        aria-hidden="true"
        class="h-5 w-5 text-white group-hover:text-white"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    
    Find Response
  
  </button>
</div>
`;

exports[`Snapshot tests Get Started Shows selected category 1`] = `
<div
  class="wrapper w-full md:w-2/5 flex flex-col mt-3 md:my-auto shadow-md p-2"
>
  <div
    class="rounded-md w-full my-2 relative"
  >
    <label
      class="block text-sm font-medium text-gray-700 text-left pl-2"
      id="listbox-label"
    >
      
    From
  
    </label>
     
    <input
      autocomplete="chrome-off"
      class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside border-b border-solid border-primary pl-2"
      id="From"
      label="From"
      options="[object Object]"
      placeholder="Mike"
      type="text"
    >
      <option
        disabled="disabled"
        selected="selected"
        value=""
      >
        
      From
    
      </option>
    </input>
  </div>
   
  <div
    class="rounded-md w-full my-2 relative"
  >
    <label
      class="block text-sm font-medium text-gray-700 text-left pl-2"
      id="listbox-label"
    >
      
    To
  
    </label>
     
    <input
      autocomplete="chrome-off"
      class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside border-b border-solid border-primary pl-2"
      id="To"
      label="To"
      options="[object Object]"
      placeholder="My lovely Boss"
      type="text"
    >
      <option
        disabled="disabled"
        selected="selected"
        value=""
      >
        
      To
    
      </option>
    </input>
  </div>
   
  <div
    class="rounded-md w-full my-2 relative"
  >
    <label
      class="block text-sm font-medium text-gray-700 text-left pl-2"
      id="listbox-label"
    >
      
     Category
  
    </label>
     
    <div
      autocomplete="chrome-off"
      class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary bg-pink-inside "
      id=" Category"
      label=" Category"
      placeholder=""
      type="select"
    >
      <button
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="listbox-label"
        class="relative w-full border border-primary rounded-md pl-3 pr-10 py-2 text-left cursor-pointer focus:outline-none bg-danger sm:text-sm excluded text-white"
        id="dropdown-button"
        type="button"
      >
        <span
          class="flex items-center"
        >
          <span
            class="ml-3 block truncate"
          >
            
        test
      
          </span>
        </span>
         
        <span
          class="ml-3 absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-400"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
       
      <div
        class="absolute mt-1 w-full rounded-md bg-white shadow-lg z-10 hidden"
      >
        <ul
          aria-activedescendant="listbox-item-3"
          aria-labelledby="listbox-label"
          class="max-h-56 rounded-md py-1 text-base ring-1 ring-black ring-opacity-5 overflow-auto focus:outline-none sm:text-sm h-48 bg-pink-inside"
          role="listbox"
          tabindex="-1"
        >
          <li
            class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
            id="listbox-item-0"
            role="option"
          >
            <div
              class="flex items-center"
            >
              <span
                class="ml-3 block font-normal truncate"
              >
                
            test
          
              </span>
            </div>
             
            <span
              class="absolute inset-y-0 right-0 flex items-center pr-4"
            >
              <svg
                class="icon-test stroke-current text-danger w-8"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </li>
          <li
            class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
            id="listbox-item-1"
            role="option"
          >
            <div
              class="flex items-center"
            >
              <span
                class="ml-3 block font-normal truncate"
              >
                
            test2
          
              </span>
            </div>
             
            <!---->
          </li>
        </ul>
      </div>
    </div>
  </div>
   
  <button
    class="group transition duration-150 ease-in-out relative w-full mt-5 shadow-sm flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-secondary lg:hover:bg-secondary-hovered lg:active:bg-secondary-hovered focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 ac"
    type="submit"
  >
    <span
      class="absolute left-0 inset-y-0 flex items-center pl-3"
    >
      <svg
        aria-hidden="true"
        class="h-5 w-5 text-white group-hover:text-white"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    
    Find Response
  
  </button>
</div>
`;

exports[`Snapshot tests Main Title Renders correctly 1`] = `
<span
  class="flex flex-col justify-center items-center md:mb-8"
>
  <span
    class="flex items-end"
  >
    <p
      class="title-test font-titles font-bold capitalize sm:text-lg md:text-2xl mr-1"
    >
      
      Kind responses for everybody
    
    </p>
     
    <svg
      class="icon-test stroke-current text-danger w-8"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</span>
`;
